# macdirstat

./: .gitignore  Cargo.toml  README.md
docs/: improving_disk_scanning.md  research-disk-scanning.md  research-visualization.md  research-windirstat-architecture.md
src/: app.rs  lib.rs  main.rs  objc_ffi.rs
src/model/: color.rs  mod.rs  tree.rs
src/scan/: getattrlistbulk.rs  ignore_scan.rs  jwalk_scan.rs  mod.rs  std_readdir.rs  walkdir_scan.rs
src/ui/: extensions.rs  mod.rs  tree_view.rs  treemap_view.rs
